refactoring + finished tests