@@ -1,15 +1,13 @@
 package service;
 
+import domain.Event;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+import repository.EventRepository;
+
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
-import domain.Event;
-import repository.EventRepository;
 
 @Service
 public class ValidationServiceImpl implements ValidationService {
@@ -24,10 +22,9 @@ public class ValidationServiceImpl implements ValidationService {
 
 	@Override
 	public boolean isEventNameUniqueOnDate(LocalDateTime date, String name) {
-        // The current implementation incorrectly calls existsByRoomIdAndDateTimeEquals with name and date
-        // We need to implement this to actually check if an event with the given name exists on the date
-        return !eventRepository.findAll().stream()
-                .anyMatch(e -> e.getName().equalsIgnoreCase(name) && 
+
+        return eventRepository.findAll().stream()
+                .noneMatch(e -> e.getName().equalsIgnoreCase(name) &&
                          e.getDateTime() != null && 
                          e.getDateTime().toLocalDate().equals(date.toLocalDate()));
 	}
@@ -42,7 +39,7 @@ public class ValidationServiceImpl implements ValidationService {
 	public boolean existsByNameAndDateExcludingId(String name, LocalDate date, Long eventId) {
 		List<Event> eventsOnDate = eventRepository.findAll().stream()
 				.filter(e -> e.getDateTime() != null && e.getDateTime().toLocalDate().equals(date))
-				.collect(Collectors.toList());
+				.toList();
 
 		return eventsOnDate.stream().filter(e -> !e.getId().equals(eventId))
 				.anyMatch(e -> e.getName().equalsIgnoreCase(name));
@@ -52,7 +49,7 @@ public class ValidationServiceImpl implements ValidationService {
 	public boolean isRoomAvailableExcludingEvent(LocalDateTime dateTime, Long roomId, Long eventId) {
 		List<Event> eventsAtDateTime = eventRepository.findAll().stream().filter(
 				e -> e.getDateTime().equals(dateTime) && e.getRoom().getId() == roomId && !e.getId().equals(eventId))
-				.collect(Collectors.toList());
+				.toList();
 		return eventsAtDateTime.isEmpty();
 	}
 }
